--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-body {background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);
-      font-size: large;}
-h1   {color: blue;}
+body{
+     background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);
+     font-size: large;
+    }
+h1 {
+    color: blue;
+    font-size: 16px;       
+   }
