--- a/style.css
+++ b/style.css
@@ -6,3 +6,23 @@ h1 {
     color: blue;
     font-size: 50px;       
    }
+h2 {
+    color: black;
+    font-size: 60px;       
+   }
+h3 {
+    color: black;
+    font-size: 70px;       
+   }
+h4 {
+    color: black;
+    font-size: 80px;       
+   }
+h5 {
+    color: black;
+    font-size: 90px;       
+   }
+h6 {
+    color: black;
+    font-size: 100px;       
+   }
